--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Hola Mundo Pagina de Prueba</h1>
+    <h2>¿Como estan?</h2>
     <script src="js/interracion.js"></script>
 </body>
 </html>
