--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Hola Mundo Pagina de Prueba</h1>
     <h2>¿Como estan?</h2>
-    <p>Primer parrafo</p>
+    <p>Primer parrafo jejeje</p>
     <script src="js/interracion.js"></script>
 </body>
 </html>
