Agregando el segundo parrafo

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Hola Mundo Pagina de Prueba</h1>
     <h2>¿Como estan?</h2>
     <p>Primer parrafo jejeje</p>
+    <p>Segundo parrafo jejeje</p>
     <script src="js/interracion.js"></script>
 </body>
 </html>
